--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>:: Portafolio :: Alberto Mijares ::</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -31,25 +31,25 @@
 				<section id="header" class="skel-layers-fixed">
 					<header>
 						<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1 id="logo"><a href="#">Willis Corto</a></h1>
-						<p>I got reprogrammed by a rogue AI<br />
-						and now I'm totally cray</p>
+						<h1 id="logo"><a href="#">Alberto Mijares</a></h1>
+						<p>Portafolio de Proyectos, Actividades y<br />
+						Tareas Realizadas hasta la fecha.</p>
 					</header>
 					<nav id="nav">
 						<ul>
-							<li><a href="#one" class="active">About</a></li>
-							<li><a href="#two">Things I Can Do</a></li>
-							<li><a href="#three">A Few Accomplishments</a></li>
-							<li><a href="#four">Contact</a></li>
+							<li><a href="#one" class="active">Info Personal</a></li>
+							<li><a href="#two">Habilidades y Destrezas</a></li>
+							<li><a href="#three">Logros Profesionales</a></li>
+							<li><a href="#four">Contacto</a></li>
 						</ul>
 					</nav>
 					<footer>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/granalberto" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+							<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://github.com/granalberto" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:amijaresp@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
 				</section>
