cambio de color

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 					<header>
 						<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1 id="logo"><a href="#">Alberto Mijares</a></h1>
-						<p>Portafolio de Proyectos, Actividades y<br />
-						Tareas Realizadas hasta la fecha.</p>
+						<p>Tecnologías de Información<br />
+						Arquitecto -  #FOSS - #DevOps</p>
 					</header>
 					<nav id="nav">
 						<ul>
 							<li><a href="#one" class="active">Info Personal</a></li>
 							<li><a href="#two">Habilidades y Destrezas</a></li>
 							<li><a href="#three">Logros Profesionales</a></li>
-							<li><a href="#four">Contacto</a></li>
+							<!-- <li><a href="#four">Contacto</a></li> -->
 						</ul>
 					</nav>
 					<footer>
@@ -61,9 +61,9 @@
 						<section id="one">
 							<div class="container">
 								<header class="major">
-									<h2>Read Only</h2>
-									<p>Just an incredibly simple responsive site<br />
-									template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+									<h2>Portafolio Laboral</h2>
+									<p>Recopilación de Proyectos, Actividades y<br />
+									  Tareas realizadas hasta la fecha.</p>
 								</header>
 								<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 							</div>
@@ -117,32 +117,32 @@
 						</section>
 						
 					<!-- Four -->
-						<section id="four">
-							<div class="container">
-								<h3>Contact Me</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-								<form method="post" action="#">
-									<div class="row uniform">
-										<div class="6u 12u(3)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="6u 12u(3)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-									</div>
-									<div class="row uniform">
-										<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-									</div>
-									<div class="row uniform">
-										<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-									</div>
-									<div class="row uniform">
-										<div class="12u">
-											<ul class="actions">
-												<li><input type="submit" class="special" value="Send Message" /></li>
-												<li><input type="reset" value="Reset Form" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</div>
-						</section>
+						<!-- <section id="four"> -->
+						<!-- 	<div class="container"> -->
+						<!-- 		<h3>Contact Me</h3> -->
+						<!-- 		<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
+						<!-- 		<form method="post" action="#"> -->
+						<!-- 			<div class="row uniform"> -->
+						<!-- 				<div class="6u 12u(3)"><input type="text" name="name" id="name" placeholder="Name" /></div> -->
+						<!-- 				<div class="6u 12u(3)"><input type="email" name="email" id="email" placeholder="Email" /></div> -->
+						<!-- 			</div> -->
+						<!-- 			<div class="row uniform"> -->
+						<!-- 				<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div> -->
+						<!-- 			</div> -->
+						<!-- 			<div class="row uniform"> -->
+						<!-- 				<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div> -->
+						<!-- 			</div> -->
+						<!-- 			<div class="row uniform"> -->
+						<!-- 				<div class="12u"> -->
+						<!-- 					<ul class="actions"> -->
+						<!-- 						<li><input type="submit" class="special" value="Send Message" /></li> -->
+						<!-- 						<li><input type="reset" value="Reset Form" /></li> -->
+						<!-- 					</ul> -->
+						<!-- 				</div> -->
+						<!-- 			</div> -->
+						<!-- 		</form> -->
+						<!-- 	</div> -->
+						<!-- </section> -->
 				
 					<!-- Five -->
 					<!--
@@ -497,7 +497,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Alberto Mijares. Todos los derechos reservados.</li><li>Plantilla: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</section>
