cambio de color en los bordes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 							<li><a href="#two">Habilidades y Destrezas</a></li>
 							<li><a href="#three">Logros Profesionales</a></li>
 							<!-- <li><a href="#four">Contacto</a></li> -->
+							<li>Contacto</li>
+														
 						</ul>
 					</nav>
 					<footer>
