Adding web references to the toolset for creating this document

--- a/index.html
+++ b/index.html
@@ -926,9 +926,13 @@
   <div class="colophon" id="id1403"><h2 class="title">About this document</h2>
     
     <p>
-      This document was produced using the DocBook 5 schema with XSL
-      stylesheets, Emacs 25 as text editor and Apache FOP for its
-      publication in PDF.
+      This document was produced using the <a class="ulink" href="https://docbook.org" target="_top">DocBook 5</a> schema with
+      <a class="ulink" href="https://github.com/docbook/xslt10-stylesheets" target="_top">XSL
+      stylesheets</a>, <a class="ulink" href="https://www.gnu.org/s/emacs" target="_top">Emacs</a> as text
+      editor, <a class="ulink" href="https://xmlsoft.org/xslt/xsltproc.html" target="_top">xsltproc</a>
+      for generating HTML 5 and <a class="ulink" href="" target="_top">Apache FOP</a>
+      for its <a class="ulink" href="https://granalberto.github.io/pdf/ajmp-cv-en.pdf" target="_top">publication
+      in PDF</a>.
     </p>
     <p>
       You can check the source code for this document in
