--- a/index.html
+++ b/index.html
@@ -932,11 +932,11 @@
       editor, <a class="ulink" href="https://xmlsoft.org/xslt/xsltproc.html" target="_top">xsltproc</a>
       for generating HTML 5 and <a class="ulink" href="" target="_top">Apache FOP</a>
       for its <a class="ulink" href="https://granalberto.github.io/pdf/ajmp-cv-en.pdf" target="_top">publication
-      in PDF</a>.
+      in PDF</a>. I'm also including a CSS Stylesheet from <a class="ulink" href="" target="_top">Neat CSS</a> for a better look and feel on the
+      web.
     </p>
     <p>
-      You can check the source code for this document in
-      https://github.com/granalberto/cv/blob/master/docbook5/ajmp-cv-en.xml.
+      You can check the source code for this document in <a class="ulink" href="https://github.com/granalberto/cv/blob/master/docbook5/ajmp-cv-en.xml" target="_top">Github</a>
     </p>
   </div>
 </section></body></html>
